Mon Sep 29 18:45:37 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/codegen/im_jni.cpp:

          Added a cast for jchar -> char conversion.

Mon Sep 29 15:55:37 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_java.mpb:

          Added link dependency on libtao_java.

        * java/tao/tao_java.mpc:

          Added more built-in sequence types.

        * java/tests/complex_idl:
        * java/tests/dcps_java_tests.lst:

          Initial commit of complex IDL test.

Mon Sep 29 14:37:05 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/INSTALL:

          Added notes on building from the subversion repository sources
          instead of a packaged release.

Fri Sep 26 21:20:37 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * README:
        * docs/INSTALL:

          Minor changes and added references to the new java/* documents.

        * java/INSTALL:
        * java/README:

          Added first draft of Java README and INSTALL documents.

        * java/tests/messenger/messenger_idl/messenger_idl_test.mpc:

          Removed an unneeded line (it had the same value as the default).

Fri Sep 26 14:04:12 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/generate_javadoc.pl:

          Added -quiet so class names are not printed on stdout.  One of the
          class names (RETCODE_ERROR) is being flagged by the scoreboard.

Thu Sep 25 22:04:12 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/build_scripts/generate_javadoc.pl:

          Script now takes an optional destination argument (used by
          autobuild).

        * java/docs/overview.html:

          Updated documentation.

Thu Sep 25 21:44:23 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dcps_ts_defaults.mpb:
        * MPC/modules/IDL2JNIHelper.pm:
        * MPC/modules/TYPESUPPORTHelper.pm:

          FooTypeSupportImpl.java is actually generated by dcps_ts.pl, not by